--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1418,8 +1418,9 @@ body {
   .hero-list { margin-block-end: 40px; }
 
   .hero-banner {
-    right: 28%;
-    width: 1100px;
+    right: 60%;
+    top: 10%;
+    width: 30%;
   }
 
 
