--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1529,3 +1529,14 @@ body {
 
 }
 }
+
+::backdrop {
+  background-image: linear-gradient(
+    45deg,
+    magenta,
+    rebeccapurple,
+    dodgerblue,
+    green
+  );
+  opacity: 0.75;
+}
